--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@
 *.png
 
 *.png
+
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
