--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ img/.DS_Store
 .sass-cache/5079350e7bc4d2326ad2af230f5157d92f2568b1/styles.sassc
 
 .sass-cache/5079350e7bc4d2326ad2af230f5157d92f2568b1/styles.sassc
+
+.sass-cache/5079350e7bc4d2326ad2af230f5157d92f2568b1/_init.sassc
+
+*.sassc
